@@ -6,6 +6,7 @@
 	Add new options of osd_cat to manual page (Jameson Rollins)
 	Fix xosd.spec.in: no LT_CURRENT, include man pages and pixmaps,
 	  License replaces Copyright
+	Install pixmaps only for new xmms plugin or bmp plugin
 
 2.2.14:
 	Timeout Bigfix Patch (P Hahn)
